compiler-core/src/parse/snapshots/rakun_core__parse__tests__invalid_pattern_label_shorthand.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1324
expression: "\npub fn main() {\n  let Wibble(:) = todo\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let Wibble(:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:14
  │
3 │   let Wibble(:) = todo
  │              ^ I was not expecting this

Found `:`, expected one of: 
- `)`
